--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "moment": "^2.22.2",
     "cube-ui": "~1.12.15",
     "vue": "^2.6.10"
   },
